--- a/honey.tex
+++ b/honey.tex
@@ -10,14 +10,12 @@
 
 
 %\title{Assessing Modeling Languages, metrics and tools}
-\title{Modeling Languages: metrics and assessing tools}
+\title{Delusion Honeypotz}
 
 %Exemplo para adição dos autores
-\author{Daniela Fonte \and Ismael Vilas Boas \and José Azevedo \and José João Peixoto \and Pedro Faria \and Pedro Silva \and Tiago Sá \and  Ulisses Costa \and Daniela da Cruz \and Pedro Rangel Henriques}
+\author{Jorge Cunha \and Leonel Cunha \and Renato Neves \and Ricardo Alves \and Ulisses Costa}
 
-\institute{Department of Informatics, University of Minho\\ Campus de Gualtar, 4710-057 Braga, Portugal\\
-\email{\{danielamoraisfonte, ismael.vb, jazevedo, jj.peixotopereira, pedro.faria.80, zepedro.cs, ulissesmonhecosta, danieladacruz, pedrorangelhenriques\}@gmail.com, tiago@esterisco.com}
-}
+\institute{Department of Informatics, University of Minho\\ Visionspace Technologies}
 
 \newcommand{\uml}{\textsf{UML}}
 \newcommand{\xmi}{\textsf{XMI}}
@@ -31,7 +29,7 @@
 %%Abstract
 \input{abstract}
 
-\keywords Modeling Languages, Software/Language Quality, Software/Language Metrics, UML
+\keywords Security, Out-of-the-box Honeypot, Delusion
 
 %%Introdução
 \input{sections/intro}
@@ -58,7 +56,6 @@
 %%Conclusão
 \input{sections/conc}
 \section*{Acknowledgments}
-The authors would like to thank to the SDMetrics staff for provide us an Academic License to explore the full system features presented in this document.
 %%Biblio
 \bibliographystyle{alpha}
 \bibliography{honey}
