--- a/honey.tex
+++ b/honey.tex
@@ -13,7 +13,7 @@
 \title{Delusion Honeypotz}
 
 %Exemplo para adição dos autores
-\author{Jorge Cunha \and Leonel Cunha \and Renato Neves \and Ricardo Alves \and Ulisses Costa}
+\author{Jorge Cunha \and Leonel Braga \and Renato Neves \and Ricardo Alves \and Ulisses Costa}
 
 \institute{Department of Informatics, University of Minho\\ Visionspace Technologies}
 
